--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "yarn lint --fix"
+    ]
+  },
   "scripts": {
     "dev": "tsnd --exit-child --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "build": "tsc"
+    "lint": "eslint src/**/*.ts --max-warnings=0",
+    "build": "tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "express": "^4.18.1"
@@ -21,6 +33,8 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
