--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
         "no-console": "off",
+        "import/prefer-default-export": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
