--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "express": "^4.18.1",
     "uuid": "^8.3.2"
   },
