--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@prisma/client": "^4.0.0",
     "celebrate": "^15.0.1",
     "express": "^4.18.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
