--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "prisma:studio": "prisma studio --schema=./src/shared/infra/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=./src/shared/infra/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/shared/infra/prisma/schema.prisma",
-    "build": "tsc",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^4.0.0",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.0.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
@@ -45,9 +46,11 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.0.0",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
